# zeelang

./: CMakeLists.txt  CMakePresets.json  build.sh  example.sh
examples/: jit_computation.mlir  jit_print.mlir  jit_simple.mlir  lower_to_llvm.mlir  test_bar.mlir  test_foo.mlir  test_roundtrip.mlir
include/: CMakeLists.txt
include/Zee/: CMakeLists.txt  ZeeDialect.h  ZeeDialect.td  ZeeOps.h  ZeeOps.td  ZeePasses.h  ZeePasses.td  ZeeTypes.h  ZeeTypes.td
include/Zee/Conversions/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Conversions/: CMakeLists.txt
lib/Conversions/LowerToLLVM/: CMakeLists.txt  LowerToLLVM.cpp
lib/Conversions/StableHLOToZee/: CMakeLists.txt  StableHLOToZee.cpp
lib/Conversions/ZeeToArith/: CMakeLists.txt  ZeeToArith.cpp
lib/Zee/: CMakeLists.txt  ZeeDialect.cpp  ZeeOps.cpp  ZeePasses.cpp  ZeeTypes.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  stablehlo-to-zee.mlir  zee-ops-test.mlir  zee-pass-test.mlir
zee-jit/: CMakeLists.txt  zee-jit.cpp
zee-opt/: CMakeLists.txt  zee-opt.cpp
